--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cow tests</title>
-    <link rel="stylesheet" media="all" href="vendor/mocha.css">
+    <title>SandBox</title>
+    <link href='https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css' rel='stylesheet' media="all"/>
     </head>
     <body>
       <div id="mocha"><p><a href=".">Index</a></p></div>
       <div id="messages"></div>
       <div id="fixtures"></div>
-      <script src="vendor/mocha.js"></script>
-      <script src="vendor/chai.js"></script>
-      <script src="cow.js"></script>
+      <script src='https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js'></script>
+      <script src="http://chaijs.com/chai.js"></script>
+      <script src="index.js"></script>
       <script>mocha.setup('bdd')</script>
-      <script src="cow_test.js"></script>
+      <script src="first_test.js"></script>
+      <script src="second_test.js"></script>
       <script>mocha.run();</script>
     </body>
 </html>
